After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 688407 - [waylandsink] 0.10.x waylandsink is not Wayland 1.0 protocol compatible
[waylandsink] 0.10.x waylandsink is not Wayland 1.0 protocol compatible
Status: VERIFIED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
0.10.x
Other Linux
: Normal normal
: 0.10.24
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-11-15 16:05 UTC by Joe Konno
Modified: 2012-12-07 15:56 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch to port 0.10 to Wayland 1.0 (9.02 KB, patch)
2012-11-30 15:25 UTC, Rob Bradford
committed Details | Review

Description Joe Konno 2012-11-15 16:05:19 UTC
The summary pretty much says it all. Waylandsink is Wayland 1.0 compatible in the gst-plugins-bad 1.0 branch as of the 1.0.2 tag. Looks like a backporting exercise.
Comment 1 Tim-Philipp Müller 2012-11-15 16:20:04 UTC
I don't think it was ever released in 0.10 and it's very unlikely it will ever get released.

If you feel like making a patch, I'm happy to push it, otherwise this should probably be closed as OBSOLETE, since 0.10 is not maintained any longer.
Comment 2 Joe Konno 2012-11-16 16:07:02 UTC
Thank you for the swift reply, Tim-Philipp. Let's see what we can do.

(In reply to comment #1)
> I don't think it was ever released in 0.10 and it's very unlikely it will ever
> get released.
> 
> If you feel like making a patch, I'm happy to push it, otherwise this should
> probably be closed as OBSOLETE, since 0.10 is not maintained any longer.
Comment 3 Rob Bradford 2012-11-30 15:25:36 UTC
Created attachment 230287 [details] [review]
Patch to port 0.10 to Wayland 1.0
Comment 4 Tim-Philipp Müller 2012-11-30 18:36:28 UTC
Thanks, pushed:


commit 72aa2625526f04cb5c191c0c2525bde4e7f9c8e6
Author: Tim-Philipp Müller <tim.muller@collabora.co.uk>
Date:   Fri Nov 30 18:32:36 2012 +0000

    configure: fix wayland check
    
    Get rid of cruft we don't need, and make work properly
    when wayland is installed in a non-standard prefix, by
    not overriding WAYLAND_CFLAGS and WAYLAND_LIBS for no
    reason.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=688407

commit 27bd971b743067bce607809e0a5cb26eab5c69a9
Author: Rob Bradford <rob@linux.intel.com>
Date:   Fri Nov 30 12:02:33 2012 +0000

    waylandsink: Port to 1.0 protocol
    
    - The globals are now notified through a wl_registry object
    - Since surface state is double buffered in the compositor it is now necessary
    to call wl_surface_commit to atomically update surface state
    - Implement the ping/pong protocol which the compositor uses to check the
    client is still alive
    - SHM buffers are now allocated through a pool
    - It is necessary to make the surface top level before the contents will be
    presented by the compositor
    - Adopt the new event handling - through wl_display_dispatch
    - Update the configure check to look for Wayland 1.0
    
    https://bugzilla.gnome.org/show_bug.cgi?id=688407
Comment 5 Joe Konno 2012-12-07 15:56:43 UTC
Thanks Rob for the code, and thanks Tim-Philipp for the push.