waylandsink: Port to 1.0 protocol

- The globals are now notified through a wl_registry object
- Since surface state is double buffered in the compositor it is now necessary
to call wl_surface_commit to atomically update surface state
- Implement the ping/pong protocol which the compositor uses to check the
client is still alive
- SHM buffers are now allocated through a pool
- It is necessary to make the surface top level before the contents will be
presented by the compositor
- Adopt the new event handling - through wl_display_dispatch
- Update the configure check to look for Wayland 1.0

https://bugzilla.gnome.org/show_bug.cgi?id=688407